# test_linear_algebra_with_rational_number

./: .gitmodules  CMakeLists.txt  main.cpp
